# substack-gateway-oss

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  api_server.py  app.py  behave.ini  config.py  main.py  mcp_server.py  mkdocs.yml  plan.md  pyproject.toml  vercel.json
.github/workflows/: auto-approve-dependabot.yaml  auto-approve-dependabot.yml  ci.yml  docker-image.yaml  e2e.yaml  e2e.yml  lintpr.yaml  production.yaml  production.yml  release.yaml
api/: deps.py
api/v1/: __init__.py  comments.py  drafts.py  health.py  me.py  notes.py  posts.py  profiles.py
client/: exceptions.py  substack.py
converters/: markdown.py
docs/: api-reference.md  authentication.md  development.md  index.md  installation.md  introduction.md  mcp.md
e2e/: drafts.feature  environment.py  health.feature  mcp.feature  mcp_agent_flow.feature  me.feature  notes.feature  posts.feature  profiles.feature  root.feature
e2e/steps/: common.py  mcp.py  mcp_agent.py
features/: comments.feature  draft_body_converter.feature  drafts.feature  environment.py  health.feature  markdown_converter.feature  me.feature  me_following.feature  me_notes.feature  me_posts.feature  notes.feature  notes_create.feature  posts.feature  profile_notes.feature  profile_posts.feature  profiles.feature
features/api/: comments.feature  drafts.feature  drafts_e2e.feature  health.feature  me_following.feature  me_notes.feature  me_posts.feature  notes_create.feature  notes_e2e.feature  posts.feature  profile_notes.feature  profile_posts.feature  root.feature
features/converters/: markdown_converter.feature
features/mcp/: drafts.feature  me.feature  notes.feature  profiles.feature
features/oauth/: token_flow.feature
features/steps/: common.py  draft_body_converter.py  drafts.py  drafts_e2e.py  health.py  markdown_converter.py  mcp_tools.py  me.py  notes_create.py  notes_e2e.py  oauth_flow.py  oauth_provider.py  posts.py  profiles.py  reader.py  root.py
gateway/api/v1/: drafts.py  health.py  posts.py
gateway/models/: schemas.py
models/: schemas.py  substack.py
samples/api/v1/: notes
samples/api/v1/draft/: response
samples/api/v1/feed/profile/: 254824415?types=note
samples/api/v1/post/987654/: comments
samples/api/v1/posts/by-id/: 987654
samples/api/v1/profile/: posts
samples/api/v1/reader/comment/: 131719084
samples/api/v1/user/254824415/: subscriber-lists
src/gateway/: __init__.py  app_factory.py  auth.py  config.py
src/gateway/api/: app.py  deps.py
src/gateway/api/v1/: __init__.py  comments.py  drafts.py  me.py  notes.py  posts.py  profiles.py  users.py
src/gateway/client/: base.py  publication.py  substack.py
src/gateway/converters/: markdown.py
src/gateway/mcp/: app.py  deps.py
src/gateway/models/: schemas.py  substack.py
src/gateway/oauth/: __init__.py  bearer.py  db.py  login.py  provider.py  repositories.py  router.py  templates.py
src/gateway/oauth/static/: shared.css
src/gateway/services/: drafts.py  following.py  notes.py  posts.py  profiles.py
src/gateway_oss/: __init__.py  app_factory.py  application_features.py  auth.py  cache.py  config.py  main.py  versioning.py
src/gateway_oss/api/: app.py  deps.py
src/gateway_oss/api/v1/: __init__.py  comments.py  me.py  notes.py
src/gateway_oss/client/: base.py  substack.py
src/gateway_oss/converters/: markdown.py
src/gateway_oss/extensions/: base.py  runtime.py
src/gateway_oss/mcp/: app.py  deps.py
src/gateway_oss/models/: pagination.py  schemas.py  substack.py
src/gateway_oss/services/: posts.py  profiles.py
src/gateway_pro/api/: deps.py
src/gateway_pro/api/v1/: drafts.py  users.py
src/gateway_pro/converters/: markdown.py
src/gateway_pro/mcp/: app.py  deps.py
src/gateway_pro/oauth/: db.py  login.py  router.py
src/gateway_pro/oauth/static/: shared.css
src/gateway_pro/services/: drafts.py
src/substack_gateway/: main.py
tests/: test_app_factory.py  test_auth.py  test_markdown.py  test_note_response.py  test_oauth_db.py  test_oauth_flow.py  test_oauth_provider.py  test_pro_draft_compat.py  test_versioning.py
