[project]
name = "substack-gateway"
version = "0.12.1"
requires-python = ">=3.10"
dependencies = [
  "gateway_oss",
  "gateway_pro",
  "uvicorn>=0.41.0",
  "uvloop>=0.22.1",
]

[tool.uv.workspace]
members = ["packages/gateway_oss", "packages/gateway_pro"]

[tool.uv]
package = false

[tool.setuptools.packages.find]
where = ["packages"]

[tool.uv.sources]
gateway_oss = { workspace = true }
gateway_pro = { workspace = true }

[dependency-groups]
dev = [
  "ruff>=0.15.4",
  "ty>=0.0.19",
  "behave>=1.2.6",
  "respx>=0.22.0",
  "httpx>=0.28.0",
  "pytest>=8.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.behave]
paths = ["packages/gateway_oss/features/", "packages/gateway_pro/features/"]
show_timings = true
summary = true
default_format = "pretty"

[tool.pytest.ini_options]
testpaths = ["packages/gateway_oss/tests", "packages/gateway_pro/tests"]

[tool.ty.src]
exclude = ["e2e/", "packages/gateway_oss/features/", "packages/gateway_pro/features/"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
commit_author = "Jakub Slys <jakub@slys.dev>"
commit_message = "chore(release): {version}"
tag_format = "{version}"