[project]
name = "gateway_oss"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.136.1",
  "httpx>=0.28.0",
  "pyrate-limiter>=3.7.0",
  "pydantic>=2.13.3",
  "pydantic-settings>=2.14.1",
  "async-lru>=2.0",
  "fastmcp>=3.2.4",
  "markdownify>=1.2.2",
  "tenacity>=9.1.2",
  "uvloop>=0.22.1",
]

[project.scripts]
app = "gateway_oss.main:main"
gateway_oss = "gateway_oss.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gateway_oss"]

[dependency-groups]
dev = [
  "ruff>=0.15.12",
  "ty>=0.0.35",
  "behave>=1.2.6",
  "respx>=0.23.1",
  "httpx>=0.28.0",
  "pytest>=8.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.behave]
paths = ["features/"]
show_timings = true
summary = true
default_format = "pretty"

[tool.pytest.ini_options]
testpaths = ["tests/"]

[tool.ty.src]
exclude = ["features/", "e2e/"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
commit_author = "Jakub Slys <jakub@slys.dev>"
commit_message = "chore(release): {version}"
tag_format = "{version}"
