[project]
name = "substack-gateway"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
  "gateway_oss",
  "uvicorn>=0.49.0",
  "uvloop>=0.22.1",
]

[project.scripts]
app = "substack_gateway.main:main"
gateway_oss = "substack_gateway.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/substack_gateway"]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
gateway_oss = { workspace = true }


[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["gateway_oss", "substack_gateway"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[tool.behave]
paths = ["packages/gateway_oss/features/"]
show_timings = true
summary = true
default_format = "pretty"

[tool.pytest.ini_options]
testpaths = ["packages/gateway_oss/tests"]


[tool.ty.src]
exclude = ["packages/gateway_oss/features/", "packages/gateway_oss/e2e/"]


[tool.semantic_release]
version_toml = ["packages/gateway_oss/pyproject.toml:project.version"]
branch = "main"
commit_author = "Jakub Slys <jakub@slys.dev>"
commit_message = "chore(release): {version}"
tag_format = "{version}"


[dependency-groups]
dev = [
  "ruff>=0.15.17",
  "ty>=0.0.55",
  "behave>=1.2.6",
  "respx>=0.23.1",
  "httpx>=0.28.0",
  "pytest>=9.1.0",
]
